<resources>
    <string name="app_name">Hyperion App</string>
    <string name="tab_text_1">My Details</string>
    <string name="tab_text_2">Check-In</string>
    <string name="tab_text_3">Medical</string>
    <string name="share_notifications">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="details_fragment_text">My Details</string>
    <string name="checkin_fragment_text">Check-In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="email_address">Email Address</string>
    <string name="hint_email">john.doe@gmail.com</string>
    <string name="hint_fullname">John Doe</string>
    <string name="dob">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="dob_hint">DD/MM/YYYY</string>
    <string name="save_btn">Save</string>
    <string name="clear_all_btn">Clear All</string>
    <string name="select_date">Select Date</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Check-In Successful!</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Check-In Successful!</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
            This is the name that users will see when interacting with this channel.
            It should describe the category of notifications that will be sent through this channel
         -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="checkin">Check In</string>
    <string name="token">Get Token</string>
    <string name="confirm_code">Confirm</string>
    <string name="btnCreateKeys">Create New Public/Primary Keys</string>
    <string name="city">City</string>
    <string name="post_code">Post Code</string>
    <string name="hyperion_logo">Hyperion Logo</string>
    <string name="allergies">Allergies</string>
    <string name="other_conditions">Other Conditions</string>
    <string name="medications">Medications</string>
    <string name="pps_number">PPS Number</string>
    <string name="weight">Weight</string>
    <string name="height">Height(ft)</string>
    <string name="gp">Registered GP</string>
    <string name="insurance_policy_number">Insurance Policy Number</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart_condition">Heart Condition</string>
    <string name="glaucoma">Glaucoma</string>
    <string name="epilepsy">Epilepsy</string>
    <string name="drug_alcohol_abuse">Drug/Alcohol abuse</string>
    <string name="smoker">Smoker</string>
    <string name="cancer">Cancer</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login_btn">Login</string>
    <string name="loading">Loading...</string>
    <string name="create_code_text">Please enter a new 2-Factor Verification code and click confirm to save it.</string>
    <string name="confirm_code_text">Please enter your 2-Factor Verification code to confirm.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_user_btn">Create User</string>
    <string name="my_sessions">History</string>
    <string name="pain_scale">Pain Scale</string>
    <string name="healthcare_facility">Healthcare Facility</string>
    <string name="syptoms">Symptoms</string>
    <string name="condition_duration">How long have you had this condition?</string>
    <string name="successful_checkin">You have Checked-In successfully!</string>
    <string name="end_session">End Session</string>
    <string name="setting_lbl1">Clear All Data</string>
    <string name="setting_lbl2">New Verification Code</string>
    <string name="setting_lbl3">Logout</string>
    <string name="share_data_now">Share Data Now</string>
    <string name="share_data_automatically">Share Data Automatically</string>
    <string name="attachments">Attachments</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="patient_recommendation">Patient Recommendation</string>
    <string name="session_id">Session ID</string>
    <string name="session_date_time">Session Date/Time</string>
    <string name="symptoms_noticed">Symptoms Noticed</string>
    <string name="error_email_not_verified">You have not verified your email address yet.</string>
    <string name="error_login_failed">Login failed.</string>
    <string name="error_fill_in_all_fields">Please make sure that you have filled in all of the required fields.</string>
    <string name="data_access_requested_do_you_want_to_sharen_now">Data access requested. Do you want to sharen now?</string>
    <string name="data_already_shared">You shared your data. Waiting for the diagnosis.</string>

    <string-array name="bloodtype_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="pain_scale_array">
        <item>Select</item>
        <item>Very Painful</item>
        <item>Somewhat Painful</item>
        <item>Painful, but managable</item>
        <item>Comes in waves</item>
        <item>Not very painful</item>
        <item>No pain at all</item>
    </string-array>
    <string-array name="duration_array">
        <item>Select</item>
        <item>Less than 1 hour</item>
        <item>1 - 5 hours</item>
        <item>5 - 12 hours</item>
        <item>12 - 24 hours</item>
        <item>Multiple days</item>
        <item>Multiple weeks/months</item>
    </string-array>
    <string-array name="hospital_array">
        <item>Select</item>
        <item>Bantry General Hospital</item>
        <item>Beaumont Hospital</item>
        <item>Cappagh National Orthopaedic Hospital</item>
        <item>Cavan Monaghan Hospital</item>
        <item>Childrens University Hospital, Temple Street</item>
        <item>Connolly Hospital Blanchardstown</item>
        <item>Coombe Womens Hospital</item>
        <item>Cork University Hospital</item>
        <item>Cork University Maternity Hospital</item>
        <item>Croom Hospital: UL Hospitals</item>
        <item>Ennis Hospital: UL Hospitals</item>
        <item>Galway University Hospitals</item>
        <item>Kerry General Hospital</item>
        <item>Letterkenny University Hospital</item>
        <item>Lourdes Orthopaedic Hospital, Kilcreene</item>
        <item>Louth County Hospital, Dundalk</item>
        <item>Mallow General Hospital</item>
        <item>Mater Misericordiae University Hospital</item>
        <item>Mayo General Hospital</item>
        <item>Mercy University Hospital, Cork</item>
        <item>Midland Regional Hospital Mullingar</item>
        <item>Midland Regional Hospital Portlaoise</item>
        <item>Midland Regional Hospital Tullamore</item>
        <item>Naas General Hospital</item>
        <item>National Maternity Hospital, Holles Street</item>
        <item>Nenagh Hospital: UL Hospitals</item>
        <item>Our Lady Of Lourdes Hospital, Drogheda</item>
        <item>Our Ladys Hospital, Navan</item>
        <item>Our Ladys Childrens Hospital Crumlin</item>
        <item>Portiuncula Hospital, Ballinasloe</item>
        <item>Roscommon County Hospital</item>
        <item>Rotunda Hospital</item>
        <item>Royal Victoria Eye and Ear Hospital, Dublin</item>
        <item>Sligo General Hospital</item>
        <item>South Infirmary-Victoria Hospital, Cork</item>
        <item>South Tipperary General Hospital</item>
        <item>St Colmcilles Hospital, Loughlinstown</item>
        <item>St Jamess Hospital</item>
        <item>St Johns Hospital Limerick</item>
        <item>St Lukes General Hospital Carlow / Kilkenny</item>
        <item>St Lukes Hospital, Rathgar (Cancer Services)</item>
        <item>St Michaels, Dun Laoghaire</item>
        <item>St Vincents University Hospital, Elm Park</item>
        <item>Tallaght University Hospital</item>
        <item>University Hospital Limerick</item>
        <item>University Maternity Hospital: UL Hospitals</item>
        <item>University Hospital Waterford</item>
        <item>Wexford General Hospital</item>
    </string-array>
</resources>
