<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/verification_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Awaiting verification"
                android:lineHeight="10dp"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:textColor="@color/alertYellowTxt"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_verifcation_yellow"/>

            <TextView
                android:id="@+id/session_id_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_id"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/session_id_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_textview3"
                android:padding="10dp"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="" />

            <TextView
                android:id="@+id/session_time_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_date_time"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/session_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_textview3"
                android:padding="10dp"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="" />

            <TextView
                android:id="@+id/symptoms_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_noticed"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symptoms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_textview3"
                android:padding="10dp"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="" />

            <TextView
                android:id="@+id/diagnosis_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diagnosis_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:height="100dp"
                android:background="@drawable/rounded_textview3"
                android:padding="10dp"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="" />

            <TextView
                android:id="@+id/recommendation_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_recommendation"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recommendation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:height="300dp"
                android:background="@drawable/rounded_textview3"
                android:padding="10dp"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="" />

            <TextView
                android:id="@+id/attachments_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attachments"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/document_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/attachments_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>